# compliance-as-code

./: .gitignore  0001-compliance-documents-as-code-poc.md  README.md  main.py  pyproject.toml  pytest.ini  schemas.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-test.yml  deploy-docs-site.yml
ce-declaration/: ce.typ
compliance_tools/: __init__.py
data/: model.yaml  risks.yaml  sbom.yaml
docs/: ADR-001-compliance-as-code.md  ce.typ  manual.typ  risk-assessment.typ  sbom.typ
manual/: manual.typ
model/: __init__.py  schemas.py
risk-assessment/: README.md  model.yaml  risk-assessment.typ  risks.yaml
schemas/: __init__.py  risk_assessment.py  sbom.py
scripts/: export_schemas.py  validate_yaml.py
software-bill-of-materials/: sbom.typ  sbom_generated.yaml  sbom_manual.yaml
software-bill-of-materials/scripts/: generate_sbom.py
tests/: __init__.py  test_manual_sections.py  test_review_schedule.py  test_risk_assessment_schema.py  test_sbom_schema.py  test_schemas.py
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: import-0001-compliance-documents-as-code-poc.md  import-readme.md  intro.md  typst-vs-docusaurus.md  yaml-model-generation-import-ideas.md
website/scripts/: generate_docs_from_yaml.py
website/src/css/: custom.css
